syntax = "proto3";

package xos;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "common.proto";

message LoginRequest {
    string username = 1;
    string password = 2;
};

message LoginResponse {
    string sessionid = 1;
};

message ToscaRequest {
    string recipe = 1;
};

message ToscaResponse {
    enum ToscaStatus {
        SUCCESS = 0;
        ERROR = 1;
    }
    ToscaStatus status = 1;
    string messages = 2;
};

service utility {

  rpc Login(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/xosapi/v1/utility/login"
            body: "*"
        };
  }

  rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/xosapi/v1/utility/logout"
            body: "*"
        };
  }

  rpc RunTosca(ToscaRequest) returns (ToscaResponse) {
        option (google.api.http) = {
            post: "/xosapi/v1/utility/tosca"
            body: "*"
        };
  }

  rpc DestroyTosca(ToscaRequest) returns (ToscaResponse) {
        option (google.api.http) = {
            post: "/xosapi/v1/utility/destroy_tosca"
            body: "*"
        };
  }

  rpc NoOp(google.protobuf.Empty) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/xosapi/v1/utility/noop"
            body: "*"
        };
  }
};
