
message ONOSApp {
  optional string name = 1 [ null = True,  max_length = 200,  content_type = "stripped",  blank = True,  modifier = optional,  db_index = False ];
  required string kind = 2 [ null = False,  default = "generic",  max_length = 30,  content_type = "stripped",  blank = False,  modifier = required,  db_index = False ];
  required int32 provider_service = 3 [ null = False,  blank = False,  model = Service,  modifier = required,  type = link,  port = provided_tenants,  db_index = True ];
  optional int32 subscriber_service = 4 [ null = True,  blank = True,  model = Service,  modifier = optional,  type = link,  port = subscribed_tenants,  db_index = True ];
  optional int32 subscriber_tenant = 5 [ null = True,  blank = True,  model = Tenant,  modifier = optional,  type = link,  port = subscribed_tenants,  db_index = True ];
  optional int32 subscriber_user = 6 [ null = True,  blank = True,  model = User,  modifier = optional,  type = link,  port = subscribed_tenants,  db_index = True ];
  optional int32 subscriber_root = 7 [ null = True,  blank = True,  model = TenantRoot,  modifier = optional,  type = link,  port = subscribed_tenants,  db_index = True ];
  optional int32 subscriber_network = 8 [ null = True,  blank = True,  model = Network,  modifier = optional,  type = link,  port = subscribed_tenants,  db_index = True ];
  optional string service_specific_id = 9 [ null = True,  max_length = 30,  content_type = "stripped",  blank = True,  modifier = optional,  db_index = False ];
  optional string service_specific_attribute = 10 [ db_index = False,  modifier = optional,  null = True,  blank = True ];
  required string connect_method = 11 [ null = False,  default = "na",  choices = "(('public', 'Public'), ('private', 'Private'), ('private-unidirectional', 'Private Unidirectional'), ('na', 'Not Applicable'))",  max_length = 30,  blank = False,  modifier = required,  db_index = False ];
  optional string install_dependencies = 12 [ db_index = False,  modifier = optional,  null = True,  blank = True ];
  optional string dependencies = 13 [ db_index = False,  modifier = optional,  null = True,  blank = True ];
  optional int32 creator = 14 [ null = True,  blank = True,  model = User,  modifier = optional,  type = link,  port = onos_apps,  db_index = True ];
}